# django-rest-framework-playground

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
django_rest_framework_playground/: asgi.py  settings.py  urls.py  wsgi.py
django_rest_framework_playground/api/: apps.py  global_exception_handler.py  models.py  serializers.py  views.py
django_rest_framework_playground/api/migrations/: 0001_initial.py  0002_rename_subcatgeory_item_subcategory.py
django_rest_framework_playground/quickstart/: views.py
scripts/: start-app.sh
tests/integration/: test_user_view.py
