[tool.poetry]
name = "django_rest_framework_playground"
version = "0.1.0"
description = ""
authors = ["Luiz Lelis <luizhlelis@gmail.com>"]
readme = "README.md"
packages = [{include = "django_rest_framework_playground"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
djangorestframework-jsonapi = "^6.0.0"
django-filter = "^22.1"
psycopg2-binary = "^2.9.5"
request-id-django-log = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"